# fastapi-demo

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: test_main.py
